Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <div class="gallery-grid-5">
                 <div class="img-card">
-                    <div class="img-placeholder"><img src="../images/Nature Reference.jpg" alt="Reference Image"
+                    <div class="img-placeholder"><img src="images/Nature Reference.jpg" alt="Reference Image"
                             height="130"></div>
                     <p class="caption">Reference</p>
                 </div>
