Refactor project overview and mentor feedback sections

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <main class="wrap-wide">
 
-        <section id="project_overview" class="hero card">
-            <div class="hero-left">
+        <section id="project_overview" class="card">
+            <div>
                 <h2>Project Overview</h2>
                 <p>Benchmark to evaluate multimodal models on ordering shuffled image sequences using a reference image
                     and a short textual context. The task requires the model to understand how events unfold over time
@@ -46,25 +46,6 @@
                     context, enabling the model to infer causal and temporal relationships. This benchmark highlights
                     the gap between visual recognition and true temporal understanding, pushing models beyond static
                     perception toward sequence-level reasoning.</p>
-            </div>
-            <div class="hero-right">
-                <h3>Mentor Feedback</h3>
-                <div class="editable-box">
-                    <ul>
-                        <li>Less knowledge about existing benchmarks mentioned in the paper.</li>
-                        <li>Didn't know the mathematics behind the metrics used like ROUGE, BLEU, bertscore and chrF++.
-                        </li>
-                        <li>Didn't have reasoning for the patterns in the results.</li>
-                        <li>Missing contribution in the Assignment 2.</li>
-                        <li>A lot of spelling and grammatical mistakes.</li>
-                        <li>In meeting mostly we asked about the expected results from us and how to approach the
-                            problem.</li>
-                        <li>From the suggestions we got we implemented them in our work.</li>
-                    </ul>
-                </div>
-                <h3>Ideas & Novelties</h3>
-                <div class="editable-box-2">Introduces temporal-ordering benchmark enabling causal and narrative
-                    sequencing evaluation in MLLMs.</div>
             </div>
         </section>
 
@@ -679,6 +660,19 @@
                 development of more
                 context-aware and sequence-aware models.
             </p>
+
+            <h3>Mentor Feedback</h3>
+            <ul>
+                <li>Less knowledge about existing benchmarks mentioned in the paper.</li>
+                <li>Didn't know the mathematics behind the metrics used like ROUGE, BLEU, bertscore and chrF++.
+                </li>
+                <li>Didn't have reasoning for the patterns in the results.</li>
+                <li>Missing contribution in the Assignment 2.</li>
+                <li>A lot of citation and grammatical mistakes.</li>
+                <li>In meeting mostly we asked about the expected results from us and how to approach the
+                    problem.</li>
+                <li>From the suggestions we implemented them in our work.</li>
+            </ul>
 
             <h3>Limitations</h3>
             <ul>
